# system_cmd

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  project.pp1.yaml  pyproject.toml  requirements.txt  setup.json  setup.py
.circleci/: config.yml  system_cmd_tests.tests
src/system_cmd/: __init__.py  interface.py  meat.py  structures.py  test_one.py  utils.py  which.py
src/system_cmd_tests/: test1.py  test_one.py
